# gatekeeper-bot

./: README.md  pyproject.toml
bot/: main.py
bot/cogs/: guilds.py  joinguard.py
bot/core/: config.py  database.py  l10n.py  logging.py  models.py
bot/helpers/: context.py  emojis.py  messages.py  utils.py
bot/l10n/en-US/: main.ftl
bot/l10n/pt-BR/: main.ftl
db/migrations/: 20230212193639_create_guilds_table.sql  20230212211444_remove_not_null_guilds_locale.sql  20230215223402_add_join_guard_config_table.sql  20230308235513_add_vanity_and_setup_to_guilds.sql
