[tool.poetry]
name = "gatekeeper-bot"
version = "0.1.0"
description = ""
authors = ["Pármenas Haniel <parmenashp@gmail.com>"]
readme = "README.md"
packages = [{include = "gatekeeper_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"
gino = "^1.0.1"
asyncpg = "^0.27.0"
SQLAlchemy = ">=1.3,<1.4"
pyjwt = "^2.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
alembic = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
